@@ -36,6 +36,10 @@ Current Version (5.1-dev, SVN trunk):
 
 - Fixed modulus operator in the parser (#2323)
 
+- maprasterquery.c: Fix crash when queryies on done on raster layers with 
+  no styles (#2343)
+
+
 Version 5.0.0 (2007-09-17)
 --------------------------
 
